# Make-Your-First-MCP-Server

./: .gitignore  README.md  pyproject.toml
docs/: api_research.md  demo_script.md  ide_setup.md  presentation_plan.md  rehearsal_checklist.md  supporting_materials.md
src/catfacts_mcp/: __init__.py  config.py  http_client.py  server.py
tests/: sample_responses.json  test_catfacts.py
